Fixed pytest.yml so that it knows the directory of the correct makefile.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,10 +14,13 @@ jobs:
     - uses: actions/checkout@v3
     
     # No need for explicit Python setup as the Makefile handles it
+    # Need to use working-directory parameter for all subsequent steps
     - name: Build environment
+      working-directory: ./backend-flask
       run: make build
-        
+    
     - name: Run tests
+      working-directory: ./backend-flask
       run: make test
       env:
         FLASK_ENV: testing
