--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^6.0.1",
     "@google-cloud/translate": "^9.0.1",
+    "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
