--- a/backend-flask/.env.example
+++ b/backend-flask/.env.example
@@ -1,4 +1,5 @@
 DB_USERNAME=username_here
 DB_PASSWORD=pass_here
 DB_NAME=name_here
+IP_INFO_ACCESS_TOKEN=access_token_here
 GEMINI_API_KEY=key_here
