--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.0.1",
     "@google-cloud/translate": "^9.0.1",
+    "@tailwindcss/oxide": "^4.1.3",
     "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
