--- a/flask-honeypot/makefile
+++ b/flask-honeypot/makefile
@@ -1,84 +1,63 @@
-# Honeypot Flask App Makefile
+# Makefile for Flask backend with virtual environment
 
-# Configuration variables
-VENV_NAME = venv
-PYTHON = python3
-PIP = $(VENV_NAME)/bin/pip
-PYTHON_VENV = $(VENV_NAME)/bin/python
-FLASK = $(VENV_NAME)/bin/flask
-GUNICORN = $(VENV_NAME)/bin/gunicorn
-APP_FILE = app.py
-WSGI_FILE = wsgi.py
-PORT = 6969
-INTERNAL_PORT = 8969
-WORKERS = 3
+# Variables
+VENV_NAME := venv
+PYTHON := python3
+PIP := $(VENV_NAME)/bin/pip
+PYTHON_VENV := $(VENV_NAME)/bin/python
+FLASK := $(VENV_NAME)/bin/flask
+APP_FILE := app.py
 
-.PHONY: build clean run run-gunicorn help requirements.txt test
+# Determine the correct activation path based on OS
+ifeq ($(OS),Windows_NT)
+	VENV_ACTIVATE := $(VENV_NAME)/Scripts/activate
+else
+	VENV_ACTIVATE := $(VENV_NAME)/bin/activate
+endif
 
-# Default target
+.PHONY: help build clean run test
+
 help:
 	@echo "Available commands:"
-	@echo "  make build          - Create virtual environment and install dependencies"
-	@echo "  make clean          - Remove virtual environment and cached files"
-	@echo "  make run            - Run the Flask application on port $(INTERNAL_PORT) (development)"
-	@echo "  make run-gunicorn   - Run the Flask application with Gunicorn (production)"
-	@echo "  make test           - Run tests (if available)"
+	@echo "  make build    - Create virtual environment and install dependencies"
+	@echo "  make run      - Run the Flask application"
+	@echo "  make clean    - Remove virtual environment and cached files"
+	@echo "  make test     - Run tests"
 
 # Create virtual environment and install dependencies
 build: $(VENV_NAME)/bin/activate
 
-$(VENV_NAME)/bin/activate: requirements.txt
-	test -d $(VENV_NAME) || $(PYTHON) -m venv $(VENV_NAME)
-	. $(VENV_NAME)/bin/activate && pip install --upgrade pip
-	. $(VENV_NAME)/bin/activate && pip install -r requirements.txt
-	. $(VENV_NAME)/bin/activate && pip install gunicorn
-	touch $(VENV_NAME)/bin/activate
+$(VENV_NAME)/bin/activate:
+	@echo "Creating virtual environment..."
+	$(PYTHON) -m venv $(VENV_NAME)
+	@echo "Installing dependencies..."
+	$(PIP) install --upgrade pip
+	$(PIP) install -r requirements.txt
+	@echo "Virtual environment setup complete."
 
-# Generate requirements file if it doesn't exist
-requirements.txt:
-	@echo "Creating sample requirements.txt file"
-	@echo "flask==2.3.3" > requirements.txt
-	@echo "requests==2.31.0" >> requirements.txt
-	@echo "python-dotenv==1.0.0" >> requirements.txt
-	@echo "ipinfo==4.4.3" >> requirements.txt
-	@echo "user-agents==2.2.0" >> requirements.txt
-	@echo "requirements.txt created. Please update with your specific package versions as needed."
-
-# Run the Flask application (development server)
-run: build
-	@echo "Starting Flask app on port $(INTERNAL_PORT)..."
+# Run the Flask application (without rebuilding)
+run:
+	@if [ ! -d "$(VENV_NAME)" ]; then \
+		echo "Virtual environment not found. Run 'make build' first."; \
+		exit 1; \
+	fi
+	@echo "Starting Flask application..."
 	$(PYTHON_VENV) $(APP_FILE)
 
-# Run with Gunicorn (production server)
-run-gunicorn: build $(WSGI_FILE)
-	@echo "Starting Flask app with Gunicorn on port $(INTERNAL_PORT) with $(WORKERS) workers..."
-	$(GUNICORN) --workers $(WORKERS) --bind 127.0.0.1:$(INTERNAL_PORT) wsgi:app
-
-# Create WSGI file if it doesn't exist
-$(WSGI_FILE):
-	@echo "Creating WSGI file..."
-	@echo "from app import app" > $(WSGI_FILE)
-	@echo "" >> $(WSGI_FILE)
-	@echo "if __name__ == \"__main__\":" >> $(WSGI_FILE)
-	@echo "    app.run()" >> $(WSGI_FILE)
-
-# Run tests if they exist
-test: build
-	@if [ -d "tests" ]; then \
-		$(PYTHON_VENV) -m pytest tests; \
-	else \
-		echo "No tests directory found"; \
-	fi
-
-# Clean up virtual environment and cache files
+# Clean up the environment (including .pytest_cache)
 clean:
 	@echo "Cleaning up..."
 	rm -rf $(VENV_NAME)
 	rm -rf __pycache__
 	rm -rf .pytest_cache
-	rm -rf .coverage
-	rm -rf .eggs
-	find . -name "*.pyc" -type f -delete
-	find . -name "*.pyo" -type f -delete
-	find . -name "__pycache__" -type d -delete
-	@echo "Cleanup complete"
+	rm -rf *.pyc
+	@echo "Cleanup complete."
+
+# Run tests
+test:
+	@if [ ! -d "$(VENV_NAME)" ]; then \
+		echo "Virtual environment not found. Run 'make build' first."; \
+		exit 1; \
+	fi
+	@echo "Running tests..."
+	$(PYTHON_VENV) -m pytest -v
