--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "axios": "^1.8.4"
+    "axios": "^1.8.4",
+    "d3-scale": "^4.0.2",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^4.2.21"
   }
 }
