--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,10 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# Include example env files
+!.env.example
+!/frontend-admin/.env.example
+
 # dotenv environment variable files
 .env
 .env.development.local
