--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "d3": "^7.9.0",
     "d3-scale": "^4.0.2",
+    "elasticsearch": "^16.7.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
